--- a/src/index.css
+++ b/src/index.css
@@ -3,9 +3,8 @@
 @tailwind utilities;
 
 
-
 * {
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family:Arial, Helvetica, sans-serif;
 }
 
 
@@ -22,3 +21,46 @@
 
     }
 }
+
+
+html {
+  scroll-behavior: smooth;
+}
+
+
+.nav {
+  
+  color: black;
+  display: flex;
+  justify-content: space-between;
+  align-items: stretch;
+  gap: 2rem;
+  padding: 0 1rem
+}
+
+.nav ul {
+
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  display: flex;
+  gap: 1rem
+}
+
+.nav a {
+  color: inherit;
+  text-decoration: none;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  padding: .25rem;
+}
+
+
+ .nav li.active {
+  background-color: palegoldenrod;
+ }
+
+ .nav li:hover {
+  background-color: cadetblue;
+ }
