--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,19 @@
+
+/* import '@fontsource/roboto/300.css';
+import '@fontsource/roboto/400.css';
+import '@fontsource/roboto/500.css';
+import '@fontsource/roboto/700.css'; */
+
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 
+
+
 * {
-    font-family:Arial, Helvetica, sans-serif;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
 }
 
 
@@ -13,9 +22,8 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      width: 300px;
-      height: 400px;
-      background-color: rebeccapurple;
+      width: 400px;
+      height: 250px;
       border-radius: 8px;
       border: 0.7px solid white;
 
@@ -49,7 +57,7 @@ html {
 
 .nav a {
   color: inherit;
-  text-decoration: none;
+  text-decoration:none;
   height: 100%;
   display: flex;
   align-items: center;
