--- a/src/index.css
+++ b/src/index.css
@@ -4,11 +4,64 @@ import '@fontsource/roboto/400.css';
 import '@fontsource/roboto/500.css';
 import '@fontsource/roboto/700.css'; */
 
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Palanquin:wght@100;200;300;400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Palanquin:wght@100;200;300;400;500;600;700&display=swap");
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
+}
+
+@layer components {
+  .max-container {
+    max-width: 1440px;
+    margin: 0 auto;
+  }
+
+  .input {
+    @apply pl-5 text-base leading-normal border outline-none sm:flex-1 max-sm:w-full text-slate-gray max-sm:p-5 sm:border-none max-sm:border-slate-gray max-sm:rounded-full;
+  }
+}
+
+@layer utilities {
+  .padding {
+    @apply px-8 py-12 sm:px-16 sm:py-24;
+  }
+
+  .padding-x {
+    @apply px-8 sm:px-16;
+  }
+
+  .padding-y {
+    @apply py-12 sm:py-24;
+  }
+
+  .padding-l {
+    @apply pl-8 sm:pl-16;
+  }
+
+  .padding-r {
+    @apply pr-8 sm:pr-16;
+  }
+
+  .padding-t {
+    @apply pt-12 sm:pt-24;
+  }
+
+  .padding-b {
+    @apply pb-12 sm:pb-24;
+  }
+
+  .info-text {
+    @apply text-lg leading-7 font-montserrat text-slate-gray;
+  }
+}
 
 
 
@@ -22,8 +75,8 @@ import '@fontsource/roboto/700.css'; */
       display: flex;
       align-items: center;
       justify-content: center;
-      width: 400px;
-      height: 250px;
+      width: 800px;
+      height: 350px;
       border-radius: 8px;
       border: 0.7px solid white;
 
@@ -72,3 +125,32 @@ html {
  .nav li:hover {
   background-color: cadetblue;
  }
+
+
+
+.profileimage {
+  position: absolute;
+  margin: none;
+
+}
+
+.title {
+  display: flex;
+  
+}
+
+
+.bigger-margin {
+  margin-top: 400px;
+  margin-bottom: 400px;
+}
+
+.smaller-margin {
+  margin-top: 200px;
+  margin-bottom: 400px
+}
+
+.big-margin {
+  margin-top: 350px;
+  margin-bottom: 400px;
+}
