Starting overhaul, adjusting existing elements to become mobile responsive

--- a/src/index.css
+++ b/src/index.css
@@ -122,9 +122,9 @@ html {
   background-color: palegoldenrod;
  }
 
- .nav li:hover {
+ /* .nav li:hover {
   background-color: cadetblue;
- }
+ } */
 
 
 
